--- a/package.json
+++ b/package.json
@@ -52,5 +52,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://dev.weblaunchpad.in/jandani_jewellers_react/"
+  "homepage": "."
 }
