--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "react-dom": "^18.2.0",
     "react-fontawesome": "^1.7.1",
     "react-helmet": "^6.1.0",
+    "react-modal": "^3.15.1",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-script-tag": "^1.1.2",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "sanitize-html": "^2.7.1",
+    "striptags": "^3.2.0",
     "swiper": "^8.3.2",
     "ui": "^0.2.4",
     "web-vitals": "^2.1.4"
